Faltan solucionar el par de problemas ya mencionados. Corregi un par de pequenios errores

--- a/ejercicio-2/srcEj2/Makefile
+++ b/ejercicio-2/srcEj2/Makefile
@@ -1,7 +1,7 @@
 all: algoritmo_exacto random_player
 
 algoritmo_exacto:
-	g++ -std=c++11 algoritmo_exacto.cpp -o algoritmo_exacto
+	g++ -std=c++11 ej2Jugador.cpp -o ej2
 
 random_player:
 	g++ -std=c++11 random_player.cpp -o random_player
