--- a/ejercicio-2/srcEj2/Makefile
+++ b/ejercicio-2/srcEj2/Makefile
@@ -1,11 +1,11 @@
-all: algoritmo_exacto random_player
+all: algoritmo_goloso random_player
 
-algoritmo_exacto:
+algoritmo_goloso:
 	g++ -std=c++11 ej2Jugador.cpp -o ej2
 
 random_player:
 	g++ -std=c++11 random_player.cpp -o random_player
 
 clean:
-	rm -f algoritmo_exacto *.o *~
+	rm -f algoritmo_goloso *.o *~
 	rm -f random_player *.o *~
