modificaciones en grid search pero todavia no anda perfecto

--- a/src/Makefile
+++ b/src/Makefile
@@ -40,7 +40,7 @@ random:
 	$(CC) $(CCFLAGS) -o $(TARGET_RANDOM) $(SOURCE_RANDOM)
 
 ejercicio3:
-	$(CC) $(CCFLAGS) -o $(TARGET_EJERCICIO_3) $(SOURCE_EJERCICIO_3)
+	$(CC) $(CCFLAGS) -g -o $(TARGET_EJERCICIO_3) $(SOURCE_EJERCICIO_3)
 
 clean:
 	$(RM) $(TARGET_EJERCICIO_1) $(TARGET_EJERCICIO_2_GOLOSO) \
